[package]
name = "vo-vox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vox - compile, run, and inspect Vo programs"

[package.metadata.vo]
vomod = "../vo.mod"

[features]
default = ["jit"]
ffi = []
jit = ["vo-vm/jit", "vo-engine/jit"]
gc-debug = ["vo-runtime/gc-debug"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vo-engine = { path = "../../../lang/crates/vo-engine", default-features = false }
vo-vm = { path = "../../../lang/crates/vo-vm" }
vo-runtime = { path = "../../../lang/crates/vo-runtime" }
vo-stdlib = { path = "../../../lang/crates/vo-stdlib", features = ["std"] }
vo-ext = { path = "../../../lang/crates/vo-ext" }
vo-ffi-macro = { path = "../../../lang/crates/vo-ffi-macro" }
vo-common = { path = "../../../lang/crates/vo-common" }
vo-syntax = { path = "../../../lang/crates/vo-syntax" }
vo-module = { path = "../../../lang/crates/vo-module" }
vogui = { path = "../../vogui/rust", default-features = false }
linkme = "0.3"
