[package]
name = "vo-vox"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Vox - compile, run, and inspect Vo programs"

[package.metadata.vo]
vomod = "../vo.mod"

[features]
default = ["native", "jit"]
native = [
    "vo-engine", "vo-vm", "vo-runtime", "vo-stdlib",
    "vo-ext", "vo-ffi-macro", "vo-common", "vo-syntax", "vo-module",
    "vogui", "linkme",
]
ffi = []
jit = ["vo-vm/jit", "vo-engine/jit"]
gc-debug = ["vo-runtime/gc-debug"]
wasm-standalone = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
vo-engine = { git = "https://github.com/vo-lang/volang", default-features = false, optional = true }
vo-vm = { git = "https://github.com/vo-lang/volang", optional = true }
vo-runtime = { git = "https://github.com/vo-lang/volang", optional = true }
vo-stdlib = { git = "https://github.com/vo-lang/volang", features = ["std"], optional = true }
vo-ext = { git = "https://github.com/vo-lang/volang", optional = true }
vo-ffi-macro = { git = "https://github.com/vo-lang/volang", optional = true }
vo-common = { git = "https://github.com/vo-lang/volang", optional = true }
vo-syntax = { git = "https://github.com/vo-lang/volang", optional = true }
vo-module = { git = "https://github.com/vo-lang/volang", optional = true }
vogui = { git = "https://github.com/vo-lang/vogui", default-features = false, optional = true }
linkme = { version = "0.3", optional = true }

[workspace]

# Redirect git deps to local sibling repos for development
[patch."https://github.com/vo-lang/volang"]
vo-common    = { path = "../../volang/lang/crates/vo-common" }
vo-engine    = { path = "../../volang/lang/crates/vo-engine" }
vo-ext       = { path = "../../volang/lang/crates/vo-ext" }
vo-ffi-macro = { path = "../../volang/lang/crates/vo-ffi-macro" }
vo-module    = { path = "../../volang/lang/crates/vo-module" }
vo-runtime   = { path = "../../volang/lang/crates/vo-runtime" }
vo-stdlib    = { path = "../../volang/lang/crates/vo-stdlib" }
vo-syntax    = { path = "../../volang/lang/crates/vo-syntax" }
vo-vm        = { path = "../../volang/lang/crates/vo-vm" }

[patch."https://github.com/vo-lang/vogui"]
vogui = { path = "../../vogui/rust" }

